# nDIDI

./: README.md  pyproject.toml
examples/example_bot/src/: __main__.py
examples/example_bot/src/components/: __init__.py  test_component.py
examples/example_bot/src/models/: __init__.py  client.py
src/ndidi/: __init__.py  auto_component.py  base_component.py  binding_commands.py  components.py  decorators.py
tests/ndidi/unit/: test_auto_component.py  test_base_component.py  test_components.py  test_decorators.py
