[tool.poetry]
name = "nDIDI"
version = "1.0.0b1"
description = "No Dynamic Import Dependency Injection"
authors = ["LEv145"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
hikari-tanjun = "^2.4.0-alpha.1"
hikari = "*"

[tool.poetry.dev-dependencies]
mkinit = "^0.3.4"
black = "^22.1.0"
poethepoet = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
mkinit = "mkinit --black --nomods --relative -w"
